--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "@types/jest": "^26.0.24",
     "@types/node": "^12.20.16",
     "@types/react": "^17.0.14",
+    "@types/react-date-range": "^1.1.6",
     "@types/react-dom": "^17.0.9",
+    "date-fns": "^2.23.0",
     "react": "^17.0.2",
+    "react-date-range": "^1.3.0",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "sass": "^1.35.2",
@@ -40,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "prettier": "2.3.2"
   }
 }
